Fix overflow on ios

--- a/hw-task3/src/components/PhotoCrop/PhotoCrop.css
+++ b/hw-task3/src/components/PhotoCrop/PhotoCrop.css
@@ -13,6 +13,9 @@
   overflow: hidden;
   border-radius: 50%;
   border: 1px darkslateblue dashed;
+
+  backface-visibility: hidden;
+  transform: translate3d(0, 0, 0);
 }
 
 .PhotoCrop__image {
